--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -16,8 +16,5 @@
   -->
 <resources>
     <version title="v1.0.0" />
-    <item text="Initial Changelog" />
-    <item text="Bullet point here" />
-    <item text="More points" />
-    <item text="" /> <!-- this one is empty and therefore ignored -->
+    <item text="First Release" />
 </resources>
