--- a/app/src/main/res/values/frames_configs.xml
+++ b/app/src/main/res/values/frames_configs.xml
@@ -21,7 +21,7 @@
     -       True means yes
     -       False means no
     -->
-    <bool name="use_old_json_format">true</bool>
+    <bool name="use_old_json_format">false</bool>
 
     <!-- Do you want notifications to be enabled for all your users?
     -       True means yes
@@ -42,7 +42,7 @@
     -       TransparentTheme.SplashScreen
     -       AmoledTheme.SplashScreen
     -->
-    <style name="MySplashScreen" parent="LightTheme.SplashScreen" />
+    <style name="MySplashScreen" parent="DarkTheme.SplashScreen" />
 
     <!--    Define the default app theme
     -       0 -> Light
@@ -52,31 +52,31 @@
     -       4 -> Auto Light-Dark
     -       5 -> Auto Light-Amoled
     -->
-    <integer name="default_theme">0</integer>
+    <integer name="default_theme">1</integer>
 
     <!--    Choose whether you want colored tiles by default -->
     <bool name="enable_colored_tiles">true</bool>
 
     <!--    Choose whether you want filled collection preview by default -->
-    <bool name="enable_filled_collection_preview">false</bool>
+    <bool name="enable_filled_collection_preview">true</bool>
 
     <!--    Accent color in tabs
     -       If true, the accent color will be used in tabs
     -       If false, the color will be set depending on your primary color
     -->
-    <bool name="enable_accent_color_in_tabs">false</bool>
+    <bool name="enable_accent_color_in_tabs">true</bool>
 
     <!--    Show icons in tabs
     -       True means yes
     -       False means no
     -->
-    <bool name="show_icons_in_tabs">false</bool>
+    <bool name="show_icons_in_tabs">true</bool>
 
     <!--    Show texts in tabs
     -       True means yes
     -       False means no
     -->
-    <bool name="show_texts_in_tabs">true</bool>
+    <bool name="show_texts_in_tabs">false</bool>
 
     <!--
         Show a custom image as placeholder while loading wallpapers or collections
